// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should view one expence 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $0.55
  </h1>
</div>
`;

exports[`should view two expences 1`] = `
<div>
  <h1>
    Viewing 
    4
     
    expenses
     totalling 
    $3.55
  </h1>
</div>
`;
